5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1716_2498.log
== TEST (2019-05-09 16:50:21) 
-- CODE:
habA = int(input("n de hab de A:"))
habB = int(input("n de hab de B:"))
pcA = 0.03
pcB = 0.015

vac = 0

while



-- ERROR:
File "XXXX", line 8
    while
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:50:26) 
-- CODE:
habA = int(input("n de hab de A:"))
habB = int(input("n de hab de B:"))
pcA = 0.03
pcB = 0.015

vac = 0





-- ERROR:
File "XXXX", line 8
    while
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:50:33) 
-- CODE:
habA = int(input("n de hab de A:"))
habB = int(input("n de hab de B:"))
pcA = 0.03
pcB = 0.015

vac = 0





-- ERROR:
File "XXXX", line 8
    while
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:57:25) 
-- CODE:
habA = int(input("n de hab de A:"))
habB = int(input("n de hab de B:"))
pcA = 3
pcB = 1.5

ap = 0 #anospassados

while( habA < habB):
	habA = * (pcA/100)
	
	
	
	





-- ERROR:
File "XXXX", line 9
    habA = * (pcA/100)
          ^
SyntaxError: can't use starred expression here
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:57:27) 
-- CODE:
habA = int(input("n de hab de A:"))
habB = int(input("n de hab de B:"))
pcA = 3
pcB = 1.5

ap = 0 #anospassados

while( habA < habB):
	habA = * (pcA/100)
	
	
	
	





-- ERROR:
File "XXXX", line 9
    habA = * (pcA/100)
          ^
SyntaxError: can't use starred expression here
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:57:38) 
-- CODE:
habA = int(input("n de hab de A:"))
habB = int(input("n de hab de B:"))
pcA = 3
pcB = 2

ap = 0 #anospassados

while( habA < habB):
	habA = * (pcA/100)
	
	
	
	





-- ERROR:
File "XXXX", line 9
    habA = * (pcA/100)
          ^
SyntaxError: can't use starred expression here
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:00:01) 
-- CODE:
habA = int(input("n de hab de A:"))
habB = int(input("n de hab de B:"))
pcA = 3.0
pcB = 1.5

anos = 0 #anospassados

while( habA < habB):
	habA = habA (pcA/100)
	habB = habB (pcB/100)
	anos = anos + 1
	print(anos)
	
	
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    habA = habA (pcA/100)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:01:31) 
-- CODE:
habA = int(input("n de hab de A:"))
habB = int(input("n de hab de B:"))
pcA = float(input("porcentagem de a:"))
pcB = float(input("porc de b:"))

anos = 0 #anospassados

while( habA < habB):
	habA = habA (pcA/100)
	habB = habB (pcB/100)
	anos = anos + 1
	print(anos)
	
	
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    habA = habA (pcA/100)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:01:42) 
-- CODE:
habA = int(input("n de hab de A:"))
habB = int(input("n de hab de B:"))
pcA = float(input("porcentagem de a:"))
pcB = float(input("porc de b:"))

anos = 0 #anospassados

while( habA < habB):
	habA = habA (pcA/100)
	habB = habB (pcB/100)
	anos = anos + 1
	print(anos)
	
	
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    habA = habA (pcA/100)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:01:53) 
-- CODE:
habA = int(input("n de hab de A:"))
habB = int(input("n de hab de B:"))
pcA = float(input("porcentagem de a:"))
pcB = float(input("porc de b:"))

anos = 0 #anospassados

while( habA < habB):
	habA = habA (pcA/100)
	habB = habB (pcB/100)
	anos = anos + 1
	print(anos)
	
	
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    habA = habA (pcA/100)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:02:06) 
-- CODE:
habA = int(input("n de hab de A:"))
habB = int(input("n de hab de B:"))
pcA = float(input("porcentagem de a:"))
pcB = float(input("porc de b:"))

anos = 0 #anospassados

while( habA < habB):
	habA = habA (pcA/100)
	habB = habB (pcB/100)
	anos = anos + 1
	print(anos)
	
	
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    habA = habA (pcA/100)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:03:17) 
-- CODE:
habA = int(input("n de hab de A:"))
habB = int(input("n de hab de B:"))
pcA = float(input("porcentagem de a:"))
pcB = float(input("porc de b:"))

anos = 0 #anospassados

while( habA < habB):
	habA = habA * (pcA/100)
	habB = habN * (pcB/100)
	anos = anos + 1
	print(anos)
	
	
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    habB = habN * (pcB/100)
NameError: name 'habN' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:03:58) 
-- CODE:
habA = int(input("n de hab de A:"))
habB = int(input("n de hab de B:"))
pcA = float(input("porcentagem de a:"))
pcB = float(input("porc de b:"))

anos = 0 #anospassados

while( habA < habB):
	habA = habA * (pcA/100)
	habB = habB * (pcB/100)
	anos = anos + 1
	print(anos)
	
	
	





-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:04:16) 
-- CODE:
habA = int(input("n de hab de A:"))
habB = int(input("n de hab de B:"))
pcA = float(input("porcentagem de a:"))
pcB = float(input("porc de b:"))

anos = 0 #anospassados

while( habA < habB):
	habA = habA * (pcA/100)
	habB = habB * (pcB/100)
	anos = anos + 1
	print(anos)
	
	
	





-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:06:00) 
-- CODE:
habA = int(input("n de hab de A:"))
habB = int(input("n de hab de B:"))
pcA = float(input("porcentagem de a:"))
pcB = float(input("porc de b:"))

anos = 0 #anospassados

while( habA < habB):
	habA = habA * (pcA/100)
	habB = habB * (pcB/100)
	anos = anos + 1
	print()
	
	
	





-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:06:43) 
-- CODE:
habA = int(input("n de hab de A:"))
habB = int(input("n de hab de B:"))
pcA = float(input("porcentagem de a:"))
pcB = float(input("porc de b:"))

anos = 0 #anospassados

while( habA < habB):
	habA = habA * (pcA/100)
	habB = habB * (pcB/100)
	anos = anos + 1
	print()
	
	
	





-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:09:54) 
-- CODE:
habA = int(input("n de hab de A:"))
habB = int(input("n de hab de B:"))
pcA = float(input("porcentagem de a:"))
pcB = float(input("porc de b:"))

anos = 0 #anospassados

while( habA < habB):
	habA = habA * (pcA/100)
	habB = habB * (pcB/100)
	anos = anos + 1
print(anos)
	
	
	





-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:11:24) 
-- CODE:
habA = int(input("n de hab de A:"))
habB = int(input("n de hab de B:"))
pcA = float(input("porcentagem de a:"))
pcB = float(input("porc de b:"))

anos = 0 #anospassados

while( habA < habB):
	habA = habA * (pcA/100)
	habB = habB * (pcB/100)
	x = habA + habB
	anos = x + 1
	print(anos)
	
	
	





-- OUTPUT:
149704.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:11:42) 
-- CODE:
habA = int(input("n de hab de A:"))
habB = int(input("n de hab de B:"))
pcA = float(input("porcentagem de a:"))
pcB = float(input("porc de b:"))

anos = 0 #anospassados

while( habA < habB):
	habA = habA * (pcA/100)
	habB = habB * (pcB/100)
	x = habA + habB
	anos = x + 1
	print(anos)
	
	
	





-- EXECUTION TIME:
0.218725
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
149704.25
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
86876.625
5793.5515625
417.34113515624995
33.56342855351562
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
180301.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:11:51) 
-- CODE:
habA = int(input("n de hab de A:"))
habB = int(input("n de hab de B:"))
pcA = float(input("porcentagem de a:"))
pcB = float(input("porc de b:"))

anos = 0 #anospassados

while( habA < habB):
	habA = habA * (pcA/100)
	habB = habB * (pcB/100)
	x = habA + habB
	anos = x + 1
	print(anos)
	
	
	





-- OUTPUT:
149704.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:12:24) 
-- CODE:
habA = int(input("n de hab de A:"))
habB = int(input("n de hab de B:"))
pcA = float(input("porcentagem de a:"))
pcB = float(input("porc de b:"))

anos = 0 #anospassados

while( habA < habB):
	habA = habA * (pcA/100)
	habB = habB * (pcB/100)
	x = habA + habB
	anos = x + 1
	print(anos)
	
	
	





-- OUTPUT:
149704.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:15:14) 
-- CODE:
habA = int(input("n de hab de A:"))
habB = int(input("n de hab de B:"))
pcA = float(input("porcentagem de a:"))
pcB = float(input("porc de b:"))

anos = 0 #anospassados

while( habA < habB):
	habA = habA * (pcA/100)
	habB = habB * (pcB/100)
	x = habA + habB
	print(x)
	
	
	





-- EXECUTION TIME:
0.14609
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
149703.25
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
86875.625
5792.5515625
416.34113515624995
32.56342855351562
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
180300.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:15:14) 
-- CODE:
habA = int(input("n de hab de A:"))
habB = int(input("n de hab de B:"))
pcA = float(input("porcentagem de a:"))
pcB = float(input("porc de b:"))

anos = 0 #anospassados

while( habA < habB):
	habA = habA * (pcA/100)
	habB = habB * (pcB/100)
	x = habA + habB
	print(x)
	
	
	





-- OUTPUT:
149703.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:20:54) 
-- CODE:
habA = int(input("n de hab de A:"))
habB = int(input("n de hab de B:"))
pcA = float(input("porcentagem de a:"))
pcB = float(input("porc de b:"))

anos = 1 #anospassados

while( habA < habB):
	habA = habA + (habA * pcA)
	habB = habB + (habB * pcB)
	print(anos)
	
	
	





-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:26:34) 
-- CODE:
A = int(input("n de hab de A:"))
B = int(input("n de hab de B:"))
pcA = float(input("porcentagem de a:"))
pcB = float(input("porc de b:"))

anos = 0  #anospassados

while( A < B):
	A +=  (A * pcA)
	habB +=  (B * pcB)
	print(
	
	
	





-- ERROR:
File "XXXX", line 19
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:26:46) 
-- CODE:
A = int(input("n de hab de A:"))
B = int(input("n de hab de B:"))
pcA = float(input("porcentagem de a:"))
pcB = float(input("porc de b:"))

anos = 0  #anospassados

while( A < B):
	A +=  (A * pcA)
	habB +=  (B * pcB)
	print(
	
	
	





-- ERROR:
File "XXXX", line 19
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:36:47) 
-- CODE:
A = int(input("n de hab de A:"))
B = int(input("n de hab de B:"))
pcA = float(input("porcentagem de a:"))
pcB = float(input("porc de b:"))

anos = 0  #anospassados

while( A < B):
	A =  (A * pcA)
	B =  (B * pcB)
	
	
	





-- ERROR:
File "XXXX", line 19
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:38:24) 
-- CODE:
A = int(input("n de hab de A:"))
B = int(input("n de hab de B:"))
pcA = float(input("porcentagem de a:"))
pcB = float(input("porc de b:"))

anos = 0  #anospassados

while( A < B):
	A =  (A * pcA)
	B =  (B * pcB)
	
	
	
	





-- ERROR:
File "XXXX", line 19
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:43:48) 
-- CODE:
A = int(input("n de hab de A:"))
B = int(input("n de hab de B:"))
pcA = float(input("porcentagem de a:"))
pcB = float(input("porc de b:"))

anos = 0  #anospassados

while( A < B):
	A =  A + (A * pcA)/100  # 5%  de A
	B = B + (B * pcB)/100
	anos = anos + 1
	print(anos)
	
	
	
	





-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:44:13) 
-- CODE:
A = int(input("n de hab de A:"))
B = int(input("n de hab de B:"))
pcA = float(input("porcentagem de a:"))
pcB = float(input("porc de b:"))

anos = 0  #anospassados

while( A < B):
	A =  A + (A * pcA)/100  # 5%  de A
	B = B + (B * pcB)/100
	anos = anos + 1
	print(anos)
	
	
	
	





-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:44:44) 
-- CODE:
A = int(input("n de hab de A:"))
B = int(input("n de hab de B:"))
pcA = float(input("porcentagem de a:"))
pcB = float(input("porc de b:"))

anos = 0  #anospassados

while( A < B):
	A =  A + (A * pcA)/100  # 5%  de A
	B = B + (B * pcB)/100
	anos = anos + 1
print(anos)
	
	
	
	





-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:45:00) 
-- CODE:
A = int(input("n de hab de A:"))
B = int(input("n de hab de B:"))
pcA = float(input("porcentagem de a:"))
pcB = float(input("porc de b:"))

anos = 0  #anospassados

while( A < B):
	A =  A + (A * pcA)/100  # 5%  de A
	B = B + (B * pcB)/100
	anos = anos + 1
print(anos)
	
	
	
	





-- EXECUTION TIME:
0.209352
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:48:09) 
-- CODE:
A = int(input("n de hab de A:"))
B = int(input("n de hab de B:"))
pcA = float(input("porcentagem de a:"))
pcB = float(input("porc de b:"))

anos = 0  #anospassados

while( A < B):
	A =  A + (A * pcA)/100  
	B = B + (B * pcB)/100
	anos = anos + 1
	print(anos)
	
	
	
	





-- EXECUTION TIME:
0.16519
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
1
2
3
4
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
1
2
3
4
5
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:48:10) 
-- CODE:
A = int(input("n de hab de A:"))
B = int(input("n de hab de B:"))
pcA = float(input("porcentagem de a:"))
pcB = float(input("porc de b:"))

anos = 0  #anospassados

while( A < B):
	A =  A + (A * pcA)/100  
	B = B + (B * pcB)/100
	anos = anos + 1
	print(anos)
	
	
	
	





-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:48:54) 
-- CODE:
A = int(input("n de hab de A:"))
B = int(input("n de hab de B:"))
pcA = float(input("porcentagem de a:"))
pcB = float(input("porc de b:"))

anos = 0  #anospassados

while( A < B):
	A =  A + (A * pcA)/100  
	B = B + (B * pcB)/100
	anos = anos + 1
print(anos)
	
	
	
	





-- EXECUTION TIME:
0.163565
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
